# solar-system

./: .gitignore  CMakeLists.txt  README.md
assets/models/: jupiter.mtl  moon.mtl  pluto.mtl
assets/shaders/: color.frag  color.vert  effect.frag  effect.vert  envmap.frag  envmap.vert  skybox.frag  texture.frag  texture.vert
include/: camera.hpp  camera_ubo.hpp  imgui_impl.hpp  model.hpp  shader.hpp  transform_ubo.hpp
src/: camera.cpp  camera_ubo.cpp  imgui_impl.cpp  main.cpp  model.cpp  shader.cpp  transform_ubo.cpp
